Fix typo and other small things in docs.html.

--- a/src/main/resources/public/docs.html
+++ b/src/main/resources/public/docs.html
@@ -31,9 +31,9 @@
     <h2>How to</h2>
     <ol>
         <li>
-            Create an app with your custom layout built.
+            Create an app with your custom layout built-in.
             Use <a href="/simple">simple</a> UI for key remapping.
-            Use <a href="/complex">complex</a> UI to provide your own Key Character Map files.
+            Use <a href="/complex">complex</a> UI to provide your own Key Character Map file(s).
         </li>
         <li>
             Install the app.
@@ -48,7 +48,7 @@
 
     <h2>Layout customization</h2>
     <p>
-        The keyboard layout is customized via <a target="_blank" href="https://source.android.com/docs/core/input/key-character-map-files">Key Character Map</a> files.
+        The keyboard layout is customized via <a target="_blank" href="https://source.android.com/docs/core/input/key-character-map-files">Key Character Map</a> file.
         To remap a physical key use <code>map key SCAN_CODE ANDROID_KEY</code> syntax
         where <code>SCAN_CODE</code> is the code that produced by the physical key
         and <code>ANDROID_KEY</code> is an Android key such as <code>ENTER</code>,
