'First base layout'

--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -75,7 +75,7 @@
             </tfoot>
         </table>
         <p>
-            <label style="display: block;">Base layout:</label>
+            <label style="display: block;">First base layout:</label>
             <select id="layout" name="layout" style="display: block;">
                 <option value="" selected>Default</option>
             </select>
