'Second base layout' 'Not needed'

--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -82,7 +82,7 @@
             <label style="display: block;">Second base layout:</label>
             <select id="layout2" name="layout2" style="display: block;">
 <!--                TODO: don't send the field in case of None-->
-                <option value="-" selected>None</option>
+                <option value="-" selected>Not needed</option>
                 <option value="">Default</option>
             </select>
         </p>
