--- a/src/main/resources/public/docs.html
+++ b/src/main/resources/public/docs.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Android external keyboard remapping without root">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Android external keyboard remapping without root</title>
-    <link rel="stylesheet" href="/common.css">
+    <link rel="stylesheet" href="./common.css">
 </head>
 <body>
 <div class="container">
@@ -17,8 +17,8 @@
 
     <h1>Android external keyboard remapping without root</h1>
     <nav>
-        <a href="/simple">Simple</a>
-        <a href="/complex">Complex</a>
+        <a href="simple.html">Simple</a>
+        <a href="complex.html">Complex</a>
         <b>Docs</b>
     </nav>
 
@@ -32,8 +32,8 @@
     <ol>
         <li>
             Create an app with your custom layout built-in.
-            Use <a href="/simple">simple</a> UI for key remapping.
-            Use <a href="/complex">complex</a> UI to provide your own Key Character Map file(s).
+            Use <a href="simple.html">simple</a> UI for key remapping.
+            Use <a href="complex.html">complex</a> UI to provide your own Key Character Map file(s).
         </li>
         <li>
             Install the app.
