--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Android external keyboard remapping without root">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Android external keyboard remapping without root</title>
-    <link rel="stylesheet" href="/common.css">
+    <link rel="stylesheet" href="./common.css">
     <style>
         form {
             width: 100%;
@@ -43,8 +43,8 @@
     <h1>Android external keyboard remapping without root</h1>
     <nav>
         <b>Simple</b>
-        <a href="/complex">Complex</a>
-        <a href="/docs">Docs</a>
+        <a href="complex.html">Complex</a>
+        <a href="docs.html">Docs</a>
     </nav>
 
     <p>
