--- a/src/main/resources/public/complex.html
+++ b/src/main/resources/public/complex.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Android external keyboard remapping without root">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Android external keyboard remapping without root</title>
-    <link rel="stylesheet" href="/common.css">
+    <link rel="stylesheet" href="./common.css">
 </head>
 <body>
 <div class="container">
@@ -17,9 +17,9 @@
 
     <h1>Android external keyboard remapping without root</h1>
     <nav>
-        <a href="/simple">Simple</a>
+        <a href="simple.html">Simple</a>
         <b>Complex</b>
-        <a href="/docs">Docs</a>
+        <a href="docs.html">Docs</a>
     </nav>
 
     <p>
