Change simple layouts descriptions.

--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -76,11 +76,11 @@
             </tfoot>
         </table>
         <p>
-            <label style="display: block;">First base layout:</label>
+            <label style="display: block;">Base layout:</label>
             <select id="layout" name="layout" style="display: block;">
                 <option value="" selected>Default</option>
             </select>
-            <label style="display: block;">Second base layout:</label>
+            <label style="display: block;">Second layout:</label>
             <select id="layout2" name="layout2" style="display: block;">
 <!--                TODO: don't send the field in case of None-->
                 <option value="-" selected>Not needed</option>
