--- a/src/main/resources/public/complex.html
+++ b/src/main/resources/public/complex.html
@@ -30,12 +30,12 @@
     </p>
 
     <form id="form" action="/complex" method="post"></form>
-    <textarea id="layout" name="layout" rows="20" required form="form">type OVERLAY</textarea>
+    <textarea id="layout" name="layout" aria-label="Layout" rows="20" required form="form">type OVERLAY</textarea>
     <span>
         <input type="checkbox" id="add-second-layout" onchange="showSecondLayout(this.checked)"/>
         <label for="add-second-layout">Add Second Layout</label><br/>
     </span>
-    <textarea id="layout2" name="layout2" rows="20" required disabled form="form">type OVERLAY</textarea>
+    <textarea id="layout2" name="layout2" aria-label="Second layout" rows="20" required disabled form="form">type OVERLAY</textarea>
     <input type="submit" value="Download" form="form">
 
     <script>
